--- a/config/gtan_cfg.yaml
+++ b/config/gtan_cfg.yaml
@@ -10,5 +10,7 @@ n_fold: 5
 seed: 2023
 max_epochs: 15
 gated: True
-dataset: S-FFSD
+#dataset: S-FFSD
+#dataset: yelp
+dataset: amazon
 test_size: 0.4
