--- a/config/rgtan_cfg.yaml
+++ b/config/rgtan_cfg.yaml
@@ -10,7 +10,8 @@ n_fold: 5
 seed: 2023
 max_epochs: 15
 gated: True
-dataset: S-FFSD
+#dataset: S-FFSD
+dataset: yelp
 test_size: 0.6
 nei_att_heads:
     yelp: 4
