--- a/config/stan_cfg.yaml
+++ b/config/stan_cfg.yaml
@@ -8,7 +8,8 @@ testlabel: data/tel_3d.npy
 test_size: 0.2
 
 epochs: 20
-batch_size: 64
+#epochs: 40
+batch_size: 128
 attention_hidden_dim: 150
 lr: 0.0001
 device: cuda:0
